[Feat] 현재 유저의 태그가 0개인 경우, 상위태그가 1개인 경우를 고려하여 추천 로직에 분기처리 추가